
/**
 * gRPC contract definiton for rate-limiter service
 */

syntax = "proto3";


service RateLimiter {
  rpc RateUserLimit (RateLimitRequest) returns (RateLimitResponse) {}
}

message RateLimitRequest {
  required string ipAddress = 1;
  required string requestedRoute = 2;
  required int64 requestedServiceId = 3;
  required int64 maxTokens = 4;
  required int64 requestWindow = 5; // time in seconds
}

message RateLimitResponse {
  required int64 maxTokens = 1;
  required int64 tokenCount = 2;
}
